--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <div id="head">
 <table width="100"border="0"cellpadding="0"cellspacing="0">
 <tr>
-<td><img src="title.jpg" width="1000" height="600"></td>
+<td><img src="title.jpg" width="800" height="200"></td>
 </tr>
 
 <tr>
@@ -16,26 +16,15 @@
 </table>
 </div>
 
-<div id="nav1"><br>
+<div id="navl"><br>
 <table width="1000"border="0"cellpadding="0"cellspacing="1" bgcolor="#999999">
-
 <tr>
-<tdalign="left" bgcolor="#ffffff" ><a herf="index.htm">作品集</a>   ＞
-<a herf="index.htm">電繪作品</a>   ＞
+<td align="center" bgcolor="#ffffff" ><a href="index.htm">作品集</a>   ＞
+<a href="index.htm">電繪作品</a>   ＞
 Photoshop作品
 </td>
 </tr>
-</table>
 <div>
-
-
-<table border="1">
-<tr>
-<td>1-1</td><td>1-2</td><td>1-3</td>
-</tr>
-
-<tr>
-<td>2-1</td><td>2-2</td><td>2-3</td>
-</tr>
 </body>
+</table>
 </html>
