--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <div id="head">
 <table width="1000"border="0"cellpadding="0"cellspacing="0">
 <tr>
-<td><img src="title.jpg" width="800" height="200"></td>
+<td align="center"><img src="title.jpg" width="800" height="200"></td>
 </tr>
 
 <tr>
